--- a/hello-world-nodejs/Dockerfile
+++ b/hello-world-nodejs/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app
 RUN npm install
 
+# Se recomienda usar mejor COPY que ADD
 COPY . /usr/src/app
 
 EXPOSE 3000
