--- a/compose-scale/docker-compose.yml
+++ b/compose-scale/docker-compose.yml
@@ -1,22 +1,23 @@
-version: '3'
+version: '2'
 services:
   web:
     build: .
     volumes:
       - .:/code
     expose:
-      - "3000"
+      - "5000"
+    # networks:
+    #   - new
   redis:
     image: redis:alpine
 #Probar con un ngnix
-  # lb:
-  #   image: eeacms/haproxy
-  #   depends_on:
-  #     - web
-  #   ports:
-  #     - "80:3000"
-  #     - "1936:1936"
-  #   environment:
-  #     BACKENDS: "web"
-  #     DNS_ENABLED: "true"
-  #     LOG_LEVEL: "info"  
+  lb:
+    image: nginx
+    volumes:
+     - ./proxy.conf:/etc/nginx/nginx.conf
+    ports:
+     - "80:80"
+    links:
+      - web:web
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    restart: always
