--- a/compose-scale/docker-compose.yml
+++ b/compose-scale/docker-compose.yml
@@ -6,8 +6,9 @@ services:
       - .:/code
     expose:
       - "5000"
-    # networks:
-    #   - new
+    depends_on:
+      - redis
+      - lb
   redis:
     image: redis:alpine
 #Probar con un ngnix
@@ -17,7 +18,5 @@ services:
      - ./proxy.conf:/etc/nginx/nginx.conf
     ports:
      - "80:80"
-    links:
-      - web:web
     command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     restart: always
